@@ -1,6 +1,5 @@
 package mcjty.rftoolsbuilder.modules.shield.blocks;
 
-import mcjty.lib.McJtyLib;
 import mcjty.lib.blocks.BaseBlock;
 import mcjty.lib.blocks.RotationType;
 import mcjty.lib.builder.BlockBuilder;
@@ -8,9 +7,7 @@ import mcjty.lib.crafting.INBTPreservingIngredient;
 import mcjty.lib.varia.GlobalCoordinate;
 import mcjty.lib.varia.Logging;
 import mcjty.rftoolsbase.modules.various.items.SmartWrenchItem;
-import mcjty.rftoolsbuilder.RFToolsBuilder;
 import net.minecraft.block.BlockState;
-import net.minecraft.client.util.ITooltipFlag;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
@@ -18,55 +15,33 @@ import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.Direction;
 import net.minecraft.util.Hand;
 import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
 import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.Explosion;
-import net.minecraft.world.IBlockReader;
 import net.minecraft.world.IWorld;
 import net.minecraft.world.World;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.Collection;
-import java.util.List;
 import java.util.function.Supplier;
 
-//@Optional.InterfaceList({
-//        @Optional.Interface(iface = "crazypants.enderio.api.redstone.IRedstoneConnectable", modid = "EnderIO")})
-public class ShieldProjectorBlock extends BaseBlock implements INBTPreservingIngredient
-        /*, IRedstoneConnectable*/ {
+import static mcjty.lib.builder.TooltipBuilder.*;
+
+public class ShieldProjectorBlock extends BaseBlock implements INBTPreservingIngredient {
 
     private final int max;
 
     public ShieldProjectorBlock(Supplier<TileEntity> te, int max) {
         super(new BlockBuilder()
-            .tileEntitySupplier(te));
+                .info(key("message.rftoolsbuilder.shiftmessage"))
+                .infoShift(header(), gold(), parameter("info", stack -> Integer.toString(max)))
+                .tileEntitySupplier(te));
         this.max = max;
     }
 
     @Override
     public RotationType getRotationType() {
         return RotationType.NONE;
-    }
-
-    @Override
-    public void addInformation(ItemStack stack, @Nullable IBlockReader world, List<ITextComponent> list, ITooltipFlag advanced) {
-        super.addInformation(stack, world, list, advanced);
-
-        list.add(new StringTextComponent(TextFormatting.GREEN + "Supports " + max + " blocks"));
-
-        if (McJtyLib.proxy.isShiftKeyDown()) {
-            list.add(new StringTextComponent(TextFormatting.WHITE + "This machine forms a shield out of adjacent"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "template blocks. It can filter based on type of"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "mob and do various things (damage, solid, ...)"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "Use the Smart Wrench to add sections to the shield"));
-            list.add(new StringTextComponent(TextFormatting.RED + "Note: block mimic is not implemented yet!"));
-            list.add(new StringTextComponent(TextFormatting.YELLOW + "Infusing bonus: reduced power consumption and"));
-            list.add(new StringTextComponent(TextFormatting.YELLOW + "increased damage."));
-        } else {
-            list.add(new StringTextComponent(TextFormatting.WHITE + RFToolsBuilder.SHIFT_MESSAGE));
-        }
     }
 
     @Override
