@@ -1,14 +1,25 @@
 package mcjty.rftoolsbuilder.modules.shield.blocks;
 
+import mcjty.lib.builder.TooltipBuilder;
+import mcjty.lib.tooltips.ITooltipSettings;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.material.Material;
+import net.minecraft.client.util.ITooltipFlag;
+import net.minecraft.item.ItemStack;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.shapes.VoxelShape;
 import net.minecraft.util.math.shapes.VoxelShapes;
+import net.minecraft.util.text.ITextComponent;
 import net.minecraft.world.IBlockReader;
 
-public class ShieldTemplateBlock extends Block {
+import javax.annotation.Nullable;
+import java.util.List;
+
+import static mcjty.lib.builder.TooltipBuilder.header;
+import static mcjty.lib.builder.TooltipBuilder.key;
+
+public class ShieldTemplateBlock extends Block implements ITooltipSettings {
 
     public enum TemplateColor {
         BLUE("blue"), RED("red"), GREEN("green"), YELLOW("yellow");
@@ -19,6 +30,10 @@ public class ShieldTemplateBlock extends Block {
             this.name = name;
         }
     }
+
+    private final TooltipBuilder tooltipBuilder = new TooltipBuilder()
+            .info(key("message.rftoolsbuilder.shiftmessage"))
+            .infoShift(header());
 
     private final TemplateColor color;
 
@@ -37,5 +52,11 @@ public class ShieldTemplateBlock extends Block {
 
     public TemplateColor getColor() {
         return color;
+    }
+
+    @Override
+    public void addInformation(ItemStack stack, @Nullable IBlockReader worldIn, List<ITextComponent> tooltip, ITooltipFlag flagIn) {
+        super.addInformation(stack, worldIn, tooltip, flagIn);
+        tooltipBuilder.makeTooltip(getRegistryName(), stack, tooltip);
     }
 }
