@@ -23,11 +23,42 @@
   "item.rftoolsbuilder.shape_card_quarry_silk": "Shape Card (Silk Quarry)",
   "item.rftoolsbuilder.shape_card_void": "Shape Card (Void)",
   "itemGroup.rftoolsbuilder": "RFTools Builder",
-  "message.rftoolsbuilder.builder": "@fThis block can quarry areas, pump liquids,\n@fmove/copy/swap structures, collect items\n@fand XP, move entities, build structures, ...\n@eInfusing bonus: reduced power consumption\n@eand increased speed.",
+
+  "message.rftoolsbuilder.shiftmessage": "<Press Shift>",
+
+  "message.rftoolsbuilder.builder.header": "This block can quarry areas, pump liquids, move/copy/swap structures, collect items and XP, move entities, build structures, ...",
+  "message.rftoolsbuilder.builder.gold": "Infusing bonus: reduced power consumption and increased speed",
+
+  "message.rftoolsbuilder.shield_block1.header": "This machine forms a shield out of adjacent template blocks. It can filter based on type of mob and do various things (damage, solid, ...). Use the Smart Wrench to add sections to the shield",
+  "message.rftoolsbuilder.shield_block1.gold": "Infusing bonus: reduced power consumption and increased damage",
+  "message.rftoolsbuilder.shield_block1.info": "Supported blocks: ",
+  "message.rftoolsbuilder.shield_block2.header": "This machine forms a shield out of adjacent template blocks. It can filter based on type of mob and do various things (damage, solid, ...). Use the Smart Wrench to add sections to the shield",
+  "message.rftoolsbuilder.shield_block2.gold": "Infusing bonus: reduced power consumption and increased damage",
+  "message.rftoolsbuilder.shield_block2.info": "Supported blocks: ",
+  "message.rftoolsbuilder.shield_block3.header": "This machine forms a shield out of adjacent template blocks. It can filter based on type of mob and do various things (damage, solid, ...). Use the Smart Wrench to add sections to the shield",
+  "message.rftoolsbuilder.shield_block3.gold": "Infusing bonus: reduced power consumption and increased damage",
+  "message.rftoolsbuilder.shield_block3.info": "Supported blocks: ",
+  "message.rftoolsbuilder.shield_block4.header": "This machine forms a shield out of adjacent template blocks. It can filter based on type of mob and do various things (damage, solid, ...). Use the Smart Wrench to add sections to the shield",
+  "message.rftoolsbuilder.shield_block4.gold": "Infusing bonus: reduced power consumption and increased damage",
+  "message.rftoolsbuilder.shield_block4.info": "Supported blocks: ",
+
+  "message.rftoolsbuilder.blue_shield_template_block.header": "This block can be used to build a shield. The set of template blocks with the same color should touch the shield projector",
+  "message.rftoolsbuilder.red_shield_template_block.header": "This block can be used to build a shield. The set of template blocks with the same color should touch the shield projector",
+  "message.rftoolsbuilder.green_shield_template_block.header": "This block can be used to build a shield. The set of template blocks with the same color should touch the shield projector",
+  "message.rftoolsbuilder.yellow_shield_template_block.header": "This block can be used to build a shield. The set of template blocks with the same color should touch the shield projector",
+
+  "message.rftoolsbuilder.shape_card.warning": "Disabled in config!",
+  "message.rftoolsbuilder.shape_card.header": "This card represents an area that can be used by the shield or builder. Sneak right click on builder to start mark mode, then right click to mark two corners of wanted area",
+  "message.rftoolsbuilder.shape_card.shape": "Shape: ",
+  "message.rftoolsbuilder.shape_card.dimension": "Dimension: ",
+  "message.rftoolsbuilder.shape_card.offset": "Offset: ",
+  "message.rftoolsbuilder.shape_card.formulas": "Formulas: ",
+  "message.rftoolsbuilder.shape_card.scan": "Scan id: ",
+
   "message.rftoolsbuilder.composer": "@fThis block can construct more complex\n@fshape cards for the Builder or Shield\n@fby creating combinations of other shape\n@fcards",
   "message.rftoolsbuilder.locator": "@fPlace this block on top of a Scanner\n@fto extend its functionality with the ability\n@fto locate entities and machines using power",
   "message.rftoolsbuilder.projector": "@fThis block can project the contents\n@fof a shape card like a hologram",
   "message.rftoolsbuilder.remote_scanner": "@2Scan id: %s\n@fThis block can scan an area and link\n@fto shape cards for the Builder or Shield.\n@fThe resulting shape card can also be used\n@fin the Composer\n@6This version can scan scan through a\n@6dialed matter transmitter which should be\n@6located above it",
-  "message.rftoolsbuilder.scanner": "@2Scan id: %s\n@fThis block can scan an area and link\n@fto shape cards for the Builder or Shield.\n@fThe resulting shape card can also be used\n@fin the Composer",
-  "message.rftoolsbuilder.shiftmessage": "<Press Shift>"
+  "message.rftoolsbuilder.scanner": "@2Scan id: %s\n@fThis block can scan an area and link\n@fto shape cards for the Builder or Shield.\n@fThe resulting shape card can also be used\n@fin the Composer"
+
 }
